Hotfix: make sure searchable content is invisible
git-svn-id: https://plugins.svn.wordpress.org/wp-ultimate-recipe/trunk@1171791 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/layout_base.scss
+++ b/css/layout_base.scss
@@ -3,7 +3,7 @@
     clear: both;
 }
 
-.wpurp-meta {
+.wpurp-meta, .wpurp-searchable-recipe {
     display: none;
 }
 
