--- a/css/layout_base_forced.scss
+++ b/css/layout_base_forced.scss
@@ -3,8 +3,8 @@
     clear: both;
 }
 
-.wpurp-meta {
-    display: none;
+.wpurp-meta, .wpurp-searchable-recipe {
+  display: none;
 }
 
 .wpurp-errors {
